<resources>
    <string name="app_name">Currency App</string>
    <string name="title_currency_exchange">Currency Exchange</string>
    <string name="details">Details</string>
    <string name="swap">Swap</string>
    <string name="day">Day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rate">Rate</string>
    <string name="title_details">Currency Rate Details</string>
    <string name="title_other_details">Other Currencies Rates</string>
    <string name="generic_error">Somthing went Error , Please try again later</string>

</resources>